# exercise

./: CMakeLists.txt  main.cpp
app/: Adapter.cpp  Adapter.h  Application.cpp  Application.h  Context.h  Font.cpp  Font.h  Framework.h  IController.cpp  IController.h  ILogic.h  IView.cpp  IView.h  InputMgr.cpp  InputMgr.h  Renderer.cpp  Renderer.h  ResourceMgr.cpp  ResourceMgr.h  Window.cpp  Window.h
common/Checkers/: Board.h
geometry/: Grid.cpp  Grid.h  Point.cpp  Point.h  Rect.cpp  Rect.h
logic/: ILogic.cpp  ILogic.h  SelectScreen.cpp  SelectScreen.h
logic/Checkers/: CheckersApp.cpp  CheckersApp.h  Player.h
logic/FluidSimulation/: FluidApp.cpp  FluidApp.h
nonstd/: binder.hpp  delegate.hpp  function_traits.hpp  type_traits.hpp
projects/Checkers/: CheckerController.cpp  CheckerController.h
projects/Checkers/logic/: CheckersApp.cpp  CheckersApp.h  Player.h
projects/Checkers/view/: CheckersView.cpp  (+1 more)
projects/SelectScreen/: SelectScreenController.cpp  SelectScreenController.h
projects/TicTacToe/: TicTacToeController.cpp  TicTacToeController.h
tools/: Collision.cpp  Collision.h  FileSystem.cpp  FileSystem.h  Grid.cpp  Grid.h  InputMgr.cpp  InputMgr.h  Msg.cpp  Msg.h  MsgMgr.cpp  MsgMgr.h  Signals.cpp  Signals.h  Tools.cpp  Tools.h  Utils.cpp  Utils.h
utils/: AnyValue.cpp  AnyValue.h  Collision.cpp  Collision.h  Utils.cpp  Utils.h
view/: IView.cpp  IView.h  SelectScreenView.cpp  SelectScreenView.h
view/Checkers/: CheckersView.cpp  CheckersView.h
widgets/: Button.cpp  Button.h  ClickableObject.cpp  ClickableObject.h  IWidget.cpp  IWidget.h
(+14 files in other folders)
